Updates and fixes

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-requests
-rich
-bibtexparser
-rispy
-beautifulsoup4
-cryptography
-beautifulsoup4
-bibtexparser
-cryptography
-downloader
-requests
-rich
-rispy
+requests==2.31.0
+rich==13.7.0
+bibtexparser==1.4.0
+rispy==0.7.1
+beautifulsoup4==4.12.2
+cryptography==41.0.7
+urllib3==2.1.0
+pytest==7.4.3
+responses==0.24.1
