--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ rich==13.7.0
 bibtexparser==1.4.0
 rispy==0.7.1
 beautifulsoup4==4.12.2
-cryptography==41.0.7
+cryptography==46.0.3
 customtkinter
 urllib3==2.1.0
 pytest==7.4.3
@@ -13,3 +13,4 @@ mypy==1.7.1
 types-requests==2.31.0.10
 types-beautifulsoup4==4.12.0.7
 types-urllib3==1.26.25.14
+defusedxml>=0.7.1
